--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,13 +109,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
     - name: Install Release Dependencies
       run: |
+        pipx install poetry
+        poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
         poetry run pip install --upgrade pip
         poetry install
