--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,15 +108,6 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install Release Dependencies
-      run: |
-        pipx install poetry
-        poetry config virtualenvs.create true
-        poetry config virtualenvs.in-project true
-        poetry run pip install --upgrade pip
-        poetry install
-        poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Install VIM
       if: ${{ github.event.inputs.debug == 'true' }}
       uses: rhysd/action-setup-vim@v1
@@ -126,6 +117,18 @@ jobs:
       with:
         detached: true
       timeout-minutes: 60
+    - name: Install Release Dependencies
+      run: |
+        where python
+        where python3
+        where pip
+        where pipx
+        pipx install poetry
+        poetry config virtualenvs.create true
+        poetry config virtualenvs.in-project true
+        poetry run pip install --upgrade pip
+        poetry install
+        poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Run Unit Tests
       run: |
         poetry run pip install colorama
