--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,13 +48,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
     - name: Install Release Dependencies
       run: |
+        pip install pipx
+        pipx install poetry
         poetry config virtualenvs.in-project true
         poetry run pip install --upgrade pip
         poetry install
@@ -108,6 +105,15 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Release Dependencies
+      run: |
+        pip install pipx
+        pipx install poetry
+        poetry config virtualenvs.create true
+        poetry config virtualenvs.in-project true
+        poetry run pip install --upgrade pip
+        poetry install
+        poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Install VIM
       if: ${{ github.event.inputs.debug == 'true' }}
       uses: rhysd/action-setup-vim@v1
@@ -117,18 +123,6 @@ jobs:
       with:
         detached: true
       timeout-minutes: 60
-    - name: Install Release Dependencies
-      run: |
-        where python
-        where python3
-        where pip
-        where pipx
-        pipx install poetry
-        poetry config virtualenvs.create true
-        poetry config virtualenvs.in-project true
-        poetry run pip install --upgrade pip
-        poetry install
-        poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Run Unit Tests
       run: |
         poetry run pip install colorama
@@ -166,13 +160,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
     - name: Install Release Dependencies
       run: |
+        pip install pipx
+        pipx install poetry
         poetry config virtualenvs.in-project true
         poetry run pip install --upgrade pip
         poetry install
@@ -256,14 +247,11 @@ jobs:
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
         brew install emacs
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
 
     - name: Install Release Dependencies
       run: |
+        pip install pipx
+        pipx install poetry
         poetry config virtualenvs.in-project true
         poetry run pip install --upgrade pip
         poetry install
@@ -307,16 +295,13 @@ jobs:
   #     with:
   #       python-version: ${{ matrix.python-version }}
 
-  #   - name: Install Poetry
-  #     uses: snok/install-poetry@v1
-  #     with:
-  #       virtualenvs-create: true
-  #       virtualenvs-in-project: true
   #   - name: Add to Poetry to PATH
   #     run: echo "C:\Users\runneradmin\.local\bin" >> $env:GITHUB_PATH
   #     shell: powershell
   #   - name: Install Release Dependencies
   #     run: |
+  #       pip install pipx
+  #       pipx install poetry
   #       poetry config virtualenvs.in-project true
   #       poetry run pip install --upgrade pip
   #       poetry install
@@ -350,14 +335,11 @@ jobs:
         timeout-minutes: 60
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-    
+
       - name: Install Release Dependencies
         run: |
+          pip install pipx
+          pipx install poetry
           poetry config virtualenvs.in-project true
           poetry run pip install --upgrade pip
           poetry install
