--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,13 +91,13 @@ jobs:
       matrix:
         python-version: ['3.9', '3.13']
         django-version:
-          - '4.2' # LTS April 2026
+          - '3.2' # LTS April 2024
           - '5.1' # December 2025
         exclude:
           - python-version: '3.9'
             django-version: '5.1'
           - python-version: '3.13'
-            django-version: '4.2'
+            django-version: '3.2'
 
     steps:
     - uses: actions/checkout@v4
@@ -113,7 +113,7 @@ jobs:
         poetry config virtualenvs.in-project true
     - name: Install Release Dependencies
       run: |
-        poetry run pip install --upgrade pip
+        poetry run pip install --upgrade pip setuptools wheel
         poetry install
         poetry run pip install -U "Django~=${{ matrix.django-version }}"
     - name: Install VIM
