--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,15 +43,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
+      - name: Install Just
+        uses: extractions/setup-just@v2
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install pipx
+          pipx install poetry
+          poetry config virtualenvs.create true
           poetry config virtualenvs.in-project true
-          poetry run pip install --upgrade pip
           poetry install -E rich
           poetry run pip install colorama
           poetry run pip install -U "django~=${{ matrix.django-version }}"
@@ -67,7 +67,10 @@ jobs:
         timeout-minutes: 60
       - name: Run Static Analysis
         run: |
-          source .venv/bin/activate
-          ./check.sh --no-fix
-          python -m readme_renderer ./README.md -o /tmp/README.html
+          just check-lint
+          just check-format
+          just check-types
+          just check-package
+          just check-docs
+          just check-readme
           echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
