--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.1", mar
 pytest-env = ">=1.0.0"
 django-stubs = ">=4.2.7"
 pexpect = ">=4.9.0"
-pyright = ">=1.1.357"
+pyright = {extras = ["nodejs"], version = ">=1.1.357"}
 ruff = ">=0.4.1"
 graphviz = ">=0.20.3"
 sphinx-tabs = ">=3.4.5"
