try fix windows runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,6 +108,7 @@ jobs:
     - name: Install Poetry
       run: |
         pip install pipx
+        pipx ensurepath
         pipx install poetry
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
