--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipx
+          pipx ensurepath
           pipx install poetry
           poetry config virtualenvs.create true
           poetry config virtualenvs.in-project true
