--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,11 +77,34 @@ shellingham = ">=1.5.4"
 # we need this on 3.9 for ParamSpec
 typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'" }
 
-
 [tool.poetry.group.dev.dependencies]
 ipdb = ">=0.13.13"
 pytest-django = ">=4.8.0"
 pytest-cov = ">=5.0.0"
+mypy = ">=1.0"
+aiohttp = ">=3.9.1"
+pytest-env = ">=1.0.0"
+django-stubs = ">=4.2.7"
+pexpect = ">=4.9.0"
+pyright = {extras = ["nodejs"], version = ">=1.1.357"}
+ruff = ">=0.4.1"
+graphviz = ">=0.20.3"
+pluggy = ">=1.5.0"
+pywinpty = { version = ">=2.0.14", markers = "sys_platform == 'win32'" }
+pytest-timeout = ">=2.3.1"
+
+[tool.poetry.extras]
+rich = ["rich"]
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+furo = ">=2024.7.18"
+sphinx-tabs = ">=3.4.5"
+readme-renderer = {extras = ["md"], version = ">=42"}
+sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.1", markers="python_version >= '3.9'"}
+doc8 = ">=1.1.1"
 Sphinx = [
     { version = ">=8.0", markers = "python_version >= '3.10'" },
     { version = ">=7.4", markers = "python_version >= '3.9'" },
@@ -91,25 +114,6 @@ docutils = [
     { version = ">=0.21", markers = "python_version >= '3.9'" },
     { version = ">=0.20", markers = "python_version < '3.9'" }
 ]
-mypy = ">=1.0"
-doc8 = ">=1.1.1"
-aiohttp = ">=3.9.1"
-readme-renderer = {extras = ["md"], version = ">=42"}
-sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.1", markers="python_version >= '3.9'"}
-pytest-env = ">=1.0.0"
-django-stubs = ">=4.2.7"
-pexpect = ">=4.9.0"
-pyright = {extras = ["nodejs"], version = ">=1.1.357"}
-ruff = ">=0.4.1"
-graphviz = ">=0.20.3"
-sphinx-tabs = ">=3.4.5"
-furo = ">=2024.7.18"
-pluggy = ">=1.5.0"
-pywinpty = { version = ">=2.0.14", markers = "sys_platform == 'win32'" }
-pytest-timeout = ">=2.3.1"
-
-[tool.poetry.extras]
-rich = ["rich"]
 
 [tool.mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
@@ -155,6 +159,10 @@ addopts = [
   "--cov=django_typer",
   "--cov-branch",
   "--cov-report=term-missing:skip-covered"
+]
+markers = [
+    "rich: marks tests as requiring rich to be installed",
+    "no_rich: marks tests as requiring rich to not be installed"
 ]
 
 [tool.coverage.run]
