--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,6 @@ classifiers = [
 "Changelog" = "https://django-typer.readthedocs.io/en/latest/changelog.html"
 "Code_of_Conduct" = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"
 
-
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 Django = ">=3.2,<6.0"
@@ -79,6 +78,10 @@ typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = ">=0.13.13"
+ipython = [
+    { version = ">=8.20.0", markers = "python_version >= '3.10'" },
+    { version = ">=8.18.1", markers = "python_version >= '3.9'" }
+]
 pytest-django = ">=4.8.0"
 pytest-cov = ">=5.0.0"
 mypy = ">=1.0"
@@ -107,13 +110,9 @@ sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = ">=0.5.1", mar
 doc8 = ">=1.1.1"
 Sphinx = [
     { version = ">=8.0", markers = "python_version >= '3.10'" },
-    { version = ">=7.4", markers = "python_version >= '3.9'" },
-    { version = ">=7.0", markers = "python_version < '3.9'" }
+    { version = ">=7.4", markers = "python_version >= '3.9'" }
 ]
-docutils = [
-    { version = ">=0.21", markers = "python_version >= '3.9'" },
-    { version = ">=0.20", markers = "python_version < '3.9'" }
-]
+docutils = ">=0.21"
 
 [tool.mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
@@ -135,7 +134,6 @@ warn_redundant_casts = true
 warn_unused_configs = true
 warn_unreachable = true
 warn_no_return = true
-exclude = ["tests"]
 
 
 # todo doc8 configuration here is not being picked up and doesnt seem to be working
