--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -48,13 +48,8 @@ jobs:
         uses: extractions/setup-just@v2
       - name: Install Dependencies
         run: |
-          sudo apt install pipx
-          pipx ensurepath
-          pipx install poetry
-          poetry config virtualenvs.create true
-          poetry config virtualenvs.in-project true
-          just install
-          poetry run pip install -U "django~=${{ matrix.django-version }}"
+          just init
+          just install django~=${{ matrix.django-version }}
       - name: Install Emacs
         if: ${{ github.event.inputs.debug == 'true' }}
         run: |
