--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,7 @@ graphviz = ">=0.20.3"
 pluggy = ">=1.5.0"
 pywinpty = { version = ">=2.0.14", markers = "sys_platform == 'win32'" }
 pytest-timeout = ">=2.3.1"
+pre-commit = ">=4.0.1"
 
 [tool.poetry.extras]
 rich = ["rich"]
