simply app stack for completion CI #156

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,11 +148,8 @@ ignore = [ "D004" ]
 [tool.pytest.ini_options]
 # py.test options:
 DJANGO_SETTINGS_MODULE = "tests.settings.base"
-python_files = [
-    "test_*.py",
-    "shellcompletion/test_*.py"
-]
-norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
+python_files = "test_*.py"
+norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ shellcompletion"
 env = [
     "TERMINAL_WIDTH=80",
 ]
