--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ Sphinx = [
     { version = ">=7.4", markers = "python_version >= '3.9'" }
 ]
 docutils = ">=0.21"
+sphinx-autobuild = ">=2024.10.3"
 
 [tool.mypy]
 # The mypy configurations: http://bit.ly/2zEl9WI
