--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Setup Just
+      uses: extractions/setup-just@v2
     - name: Install
       run: |
         just init
@@ -199,7 +200,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Setup Just
+      uses: extractions/setup-just@v2
     - name: Install
       run: |
         just init
@@ -250,7 +252,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
+    - name: Setup Just
+      uses: extractions/setup-just@v2
     - name: Install Homebrew and Zshell Completion
       shell: zsh {0}
       run: |
@@ -332,6 +335,8 @@ jobs:
     - name: Add to Poetry to PATH
       run: echo "C:\Users\runneradmin\.local\bin" >> $env:GITHUB_PATH
       shell: powershell
+    - name: Setup Just
+      uses: extractions/setup-just@v2
     - name: Install Release Dependencies
       run: |
         just init
@@ -366,7 +371,8 @@ jobs:
         timeout-minutes: 60
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-
+      - name: Setup Just
+        uses: extractions/setup-just@v2
       - name: Install Release Dependencies
         run: |
           just init
