run scorecard only on main

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -6,9 +6,8 @@ on:
   # To guarantee Maintained check is occasionally updated. See
   # https://github.com/ossf/scorecard/blob/main/docs/checks.md#maintained
   push:
-  #  branches: [ $default-branch ]
+    branches: [ main ]
 
-# Declare default permissions as read only.
 permissions: read-all
 
 jobs:
