fix CI coverage file artificats

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -395,7 +395,7 @@ jobs:
       - name: Get coverage files
         uses: actions/download-artifact@v4
         with:
-          pattern: *.coverage
+          pattern: *coverage
           merge-multiple: true
 
       - run: ls -la *.coverage
